--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,10 @@
 {
 	"name": "Homebrew Finder",
-	"description": "A Browser Extension that finds Homebrew Formulae and Casks for the current website you're on",
+	"description": "A Browser Extension that finds Homebrew Packages for the current website you're on",
 	"version": "0.1",
 	"permissions": [
-		"activeTab"
+		"activeTab",
+    "tabs"
 	],
 	"web_accessible_resources": [],
 	"background": {
@@ -12,10 +13,10 @@
 	"content_scripts": [],
 	"browser_action": {
 		"default_title" : "Homebrew Finder",
-		"default_icon" : "icons/pack-icon.png",
+		"default_icon" : "icons/pack-icon-inactive.png",
 		"default_popup": ""
 	},
-    "icons": {
+  "icons": {
       "16": "icons/pack-icon.png",
       "32": "icons/pack-icon.png",
       "48": "icons/pack-icon.png"
