--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,8 @@
 name: CI
 on: push
 jobs:
-  build:
+  test:
+    name: Run Jest Testing Suite
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
