--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,14 @@
   "globals": {
     "chrome": "readonly",
     "browser": "readonly",
+    "jest": "readonly",
     "test": "readonly",
-    "expect": "readonly"
+    "expect": "readonly",
+    "describe": "readonly",
+    "afterAll": "readonly",
+    "afterEach": "readonly",
+    "beforeAll": "readonly",
+    "beforeEach": "readonly"
   },
   "rules": {
   }
