--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node index.js",
+    "dev": "node index.js --watch",
     "test": "jest"
   },
   "repository": {
@@ -26,6 +28,9 @@
     "eslint-plugin-promise": "^5.2.0"
   },
   "dependencies": {
-    "jest": "^27.4.7"
+    "crx": "^5.0.1",
+    "fs-extra": "^10.0.0",
+    "jest": "^27.4.7",
+    "node-watch": "^0.7.3"
   }
 }
